force-app/main/default/objects/FLODocs__Flow_Scanner_Info__c/FLODocs__Flow_Scanner_Info__c.object-meta.xml
<CustomObject>
    <label>Flow Scanner Info</label>
    <nameField>
        <label>Flow Scanner Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flow Scanner Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>