force-app/main/default/objects/FLODocs__Flow_Scanner_Info__c/fields/FLODocs__Decisions_Fie__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Decisions_Fie__c</fullName>
    <label>Decisions Fie</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>