force-app/main/default/objects/FLODocs__Flow_Scanner_Info__c/fields/FLODocs__Record_Lookups_Field__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Record_Lookups_Field__c</fullName>
    <label>Record Lookups Field</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>