force-app/main/default/objects/FLODocs__Flow_Scanner_Info__c/fields/FLODocs__Steps__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Steps__c</fullName>
    <label>Steps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>